...
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>

    <string name="new_option">new…</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="agree">Agree</string>
...
    <string name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string name="backpack">Backpack</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="merge">Merge</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>


    <!-- Action Mode Titles -->
...
    <string name="look_details">Resolution: %s, size: %s</string>
    <string name="sound_duration">Duration: %s</string>
    <string name="sound_details">Duration: %s, size: %s</string>
    <!--  -->

    <!-- Rename Dialog Titles -->
    <string name="rename_project">Rename project</string>
    <string name="rename_scene_dialog">Rename scene</string>
    <string name="rename_sprite_dialog">Rename actor or object</string>
    <string name="rename_look_dialog">Rename look</string>
    <string name="rename_sound_dialog">Rename sound</string>
    <string name="rename_nfctag_dialog">Rename NFC tag</string>
    <string name="rename_data_dialog">Rename</string>

    <!-- New Script Group Dialog -->
    <string name="new_group">New group</string>

...
