...
    <!--  -->

    <!-- Brick Data Editor Strings -->
    <string name="brick_data_editor_title">Brick editor</string>
    <string name="separator">|</string>
    <string name="add_text">Add text</string>
    <string name="edit_text">Edit text</string>
    <string name="text_hint">Brick text</string>
    <string name="add_variable">Add variable</string>
    <string name="add_line_break">Add line break</string>
    <string name="edit_variable">Edit variable</string>
    <string name="variable_hint">Variable name</string>
    <string name="brick_show_text_var">Show variable</string>
...
